# come2017_linux

./: README.md
01_bash/: bash_scripting.odp
01_bash/example_files/: Src_homology_2_domains.fasta  annexin.fasta  haloperoxidase.fasta  lectin.fasta  papain.fasta  parvalbumin-like.fasta  subtilase.fasta
02_cpp/: CMakeLists.txt  playground.cpp
03_cpp_results/: CMakeLists.txt
03_cpp_results/src/: functions.cpp  functions.hpp  playground.cpp
day_1/: sample.newick  sample.sh
day_2/: Starch_binding_domain.fasta  lysozyme.fasta  rr_receiver.fasta  xylose_isomerase.fasta
day_2_bkp/: sample_1.fasta
